simplified positions, fixed bugs with overflow and resizing where overlay- and key-div would cause issues

--- a/style/snakeStyle.css
+++ b/style/snakeStyle.css
@@ -1,43 +1,35 @@
-#snakeOverlay {
-    position: absolute;
-    z-index: 1;
-    display: table;
-    width: calc(60vw + 39px);
-    height: calc(30vw + 19px);
-    background-color: rgba(84,84,84, 0.8);
-    color: white;
-    font-size: 50px;
-    vertical-align: middle;
-    text-align: center;
-    transition: background-color 0.4s;
-}
-
-#snakeOverlay:hover {
-    background-color: rgba(84,84,84, 0.5);
-    cursor: pointer;
-    transition: background-color 0.4s;
-}
-
-#snakeText {
-    display: table-cell;
-    vertical-align: middle;
-}
-
 #snakeGrid {
-    position: absolute;
+    position: relative;
     display: grid;
+    color: white;
     grid-template-rows: repeat(10, 3vw);
     grid-template-columns: repeat(20, 3vw);
     grid-column-gap: 2px;
     grid-row-gap: 2px;
 }
 
+#snakeOverlay {
+    position: absolute;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(84,84,84, 0.8);
+    font-size: 50px;
+    text-align: center;
+    transition: background-color 0.4s;
+}
+
+#snakeOverlay:hover {
+    background-color: rgba(84,84,84, 0.6);
+    cursor: pointer;
+    transition: background-color 0.4s;
+}
+
 #snakeKeys {
     position: absolute;
-    z-index: 2;
-    bottom: -31px;
+    top: 100%;
     width: 100%;
-    height: 30px;
     text-align: center;
     line-height: 30px;
     background-color: rgba(0,0,0,0.4);
